+ added payout script containing payout patterns * implemented pattern generation for winning slots
note: currently implements an always win scenerio

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,6 +55,7 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
   "files": [
+    "./src/ts/payout.ts",
     "./src/ts/button.ts",
     "./src/ts/slot.ts",
     "./src/ts/app.ts"
