--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/cecilereine/spiralworks-slotmachine#readme",
   "devDependencies": {
+    "file-loader": "^1.1.11",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   },
